--- a/FE-Framework1/package.json
+++ b/FE-Framework1/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.4.0",
     "antd": "^5.6.0",
     "bootstrap": "^5.3.0",
+    "font-awesome": "^4.7.0",
     "json-server": "^0.17.3",
     "ng2-search-filter": "^0.5.1",
     "rxjs": "~7.8.0",
