--- a/FE-Framework1/package.json
+++ b/FE-Framework1/package.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.7.0",
     "json-server": "^0.17.3",
     "ng2-search-filter": "^0.5.1",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
